--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@reduxjs/toolkit": "^2.2.6",
     "bootstrap": "^5.3.3",
     "react": "18.3.1",
